# time-mcp

./: .dropboxignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/time_mcp_server/: __init__.py  __main__.py  notify_hook.py  parsers.py  server.py  state.py
tests/: test_alarm.py  test_notify_hook.py  test_parsers.py  test_state.py  test_stopwatch.py  test_time.py  test_timer.py
