[project]
name = "time-mcp"
version = "0.1.0"
description = "FastMCP server providing time, timezone, timer, stopwatch, and alarm tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Simon Jr", email = "danielsimonjr@yahoo.com" },
]
license = { text = "MIT" }
keywords = ["time", "timezone", "timer", "stopwatch", "alarm", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "tzlocal>=5.3.1",
    "dateparser>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
time-mcp = "time_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/time_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
